# open-studio-platform

./: .gitignore  BLOCKERS.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  IMPLEMENTATION_MATRIX.md  LICENSE  README.md  RFC_PROCESS.md  SECURITY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github-templates/: PULL_REQUEST_TEMPLATE.md  RFC_TEMPLATE.md  SECURITY_ISSUE.md
.github-templates/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  rfc.yml
.github-templates/workflows/: flagship-template-sync.yml  platform-code-verification.yml  release.yml  rubric-studio-open-release.yml  security.yml
.github/workflows/: ci.yml
community/: channels.md  github-discussions-seeds.md
compliance/: README.md  intake-privacy-exclusions.json  telemetry-forbidden-fields.json
compliance/dco/: README.md  dco-policy.md  maintainer-merge-check.md
compliance/licensing/: NOTICE.template.md  gpl-lgpl-posture.md  lgpl-dynamic-linking-register.md  license-policy.md
compliance/privacy/: intake-privacy-exclusions.md  rubric-studio-open-privacy.md  telemetry-privacy.md
compliance/scripts/: check-dco.mjs  check-intake-privacy-exclusions.mjs  check-notice-readiness.mjs  check-npm-licenses.mjs  check-security-configs.mjs  check-telemetry-forbidden-fields.mjs
configs/: flagships.json  platform-contracts.json  sentry-scrub.json
configs/cargo-audit/: accepted-advisories.json  audit.toml
configs/cargo-deny/: deny.toml
configs/github/: rubric-studio-open-settings.yml
configs/gitleaks/: gitleaks.toml
configs/license/: npm-license-policy.json  robotics-studio-open-policy.yml
configs/osv/: osv-scanner.toml
configs/sbom/: cyclonedx.json  robotics-studio-open.cyclonedx.yml
configs/semgrep/: security.yml
configs/sentry/: projects.json  telemetry-dashboard-provisioning.md
crates/auraone-platform-crash/: Cargo.toml
crates/auraone-platform-crash/src/: lib.rs
crates/auraone-platform-dataset-stream/: Cargo.toml
crates/auraone-platform-intake/: Cargo.toml
crates/auraone-platform-intake/src/: lib.rs
crates/auraone-platform-intake/tests/fixtures/: sample-payload.json
crates/auraone-platform-llm-gateway/: Cargo.toml
crates/auraone-platform-mcp/: Cargo.toml
crates/auraone-platform-otlp/: Cargo.toml
crates/auraone-platform-otlp/src/: lib.rs
crates/auraone-platform-ros-bag/: Cargo.toml
crates/auraone-platform-sidecar/: Cargo.toml
crates/auraone-platform-telemetry/: Cargo.toml
crates/auraone-platform-updater/: Cargo.toml
crates/auraone-platform-updater/src/: lib.rs
crates/auraone-platform-updater/tests/fixtures/: stable-manifest.json
crates/auraone-platform-video/: Cargo.toml
crates/auraone-platform-video/src/: lib.rs
distribution/: README.md  release-plan.uiuxoss.json
distribution/dns/: agentstudio-demo.auraone.ai.zone  agentstudio.auraone.ai.zone  cloudflare-rubric-studio-open.tf  robotics-studio-open.zone
distribution/github/: robotics-studio-open-settings.yml
distribution/launch/: open-studio-launch-ops.json
distribution/linux/: linux-artifact-readiness.json  linux-package-matrix.md
distribution/operations/: INSTALL_UPDATE_ROLLBACK.md
distribution/pypi/: robostudio-engine-trusted-publisher.md
distribution/pypi/agentstudio/: README.md  pyproject.toml
distribution/releases/: agent-studio-open-0.1.0.json
distribution/robotics/: robotics-hosted-hardware-readiness.json
docs/: flagship-extension-consumption.md  platform-operating-cadence.md  platform-template-sync.md
docs-template/: README.md  docusaurus.config.js  docusaurus.config.ts  package.json  sidebars.js  sidebars.ts  tsconfig.json  vercel.json
docs-template/docs/: architecture.md  (+8 more)
registries/pypi/rubric-studio/: CHANGELOG.md  README.md  pyproject.toml  requirements-release.txt
registries/pypi/rubric-studio/src/rubric_studio/: __init__.py  cli.py
registries/pypi/rubric-studio/tests/: test_cli.py
rfcs/: 0000-template.md
schemas/: _redirects  intake-packet.schema.json  release-evidence.schema.json
scripts/: build-signed-macos-flagships.sh  check-signing-wrapper-usage.mjs  check-template-sync.sh  generate-checksums.sh  generate-launch-ops-evidence-templates.mjs  generate-product-release-sboms.mjs  generate-robotics-hardware-evidence-templates.mjs  generate-staged-release-evidence.mjs  generate-windows-evidence-templates.mjs  make-tauri-updater-manifest.mjs  make-updater-manifest.mjs  notarize.sh  prepare-windows-msi-release.mjs  prepare-winget-manifests.mjs  publish-release.sh  publish-updater-manifest.mjs  release-oss-preflight.mjs  run-cargo-audit.mjs  sign-linux.sh  sign-macos.sh  sign-windows.ps1  smoke-live-platform.mjs  sync-docs-version.mjs  verify-agent-studio-open-release.mjs  verify-agent4-release-ops.mjs  verify-cloud-import-consumer-readiness.mjs  verify-dco-enforcement-readiness.mjs  verify-distribution-staging.mjs  verify-ga-approval-evidence.mjs  verify-launch-ops-readiness.mjs  verify-linux-artifact-readiness.mjs  verify-linux-package-matrix.mjs  verify-observability-readiness.mjs  verify-platform-contracts.mjs  verify-platform.mjs  verify-powershell-syntax.mjs  verify-public-blocker-issues-readiness.mjs  verify-release-blocker-preflight.mjs  verify-release-evidence.mjs  verify-release-ops.mjs  (+10 more)
security/: disclosure.md  maintainer-responsibilities.md
support/: SLA.md  oss-support-runbook.md
templates/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
templates/tauri-app/src-tauri/binaries/: flagship-engine-aarch64-apple-darwin
templates/tauri-app/src-tauri/capabilities/: default.json
templates/tauri-app/src-tauri/configs/macos/: entitlements.plist
templates/tauri-app/src-tauri/src/: commands.rs  deep_link.rs  lib.rs  main.rs
tests/: community_channels_test.mjs  dco_guidance_test.mjs  docs_version_sync_test.mjs  flagship_integration_contracts_test.mjs  intake_roles_test.mjs  intake_schema_policy_test.mjs  maintainers_page_test.mjs  platform-contracts.test.mjs  platform-release-flow.test.mjs  platform_operating_cadence_test.mjs  security_checklists_test.mjs  security_policy_test.mjs
(+158 files in other folders)
