[workspace]
members = [
  "crates/auraone-platform-keychain",
  "crates/auraone-platform-intake",
  "crates/auraone-platform-updater",
  "crates/auraone-platform-telemetry",
  "crates/auraone-platform-crash",
  "crates/auraone-platform-sidecar",
  "crates/auraone-platform-video",
  "crates/auraone-platform-dataset-stream",
  "crates/auraone-platform-ros-bag",
  "crates/auraone-platform-mcp",
  "crates/auraone-platform-otlp",
  "crates/auraone-platform-llm-gateway",
]
exclude = ["templates/tauri-app/src-tauri"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/auraoneai/open-studio-platform"
rust-version = "1.78"

[workspace.dependencies]
aes-gcm = "0.10"
anyhow = "1.0"
base64 = "0.22"
bytes = "1.6"
chrono = { version = "0.4", features = ["serde", "clock"] }
dirs = "6"
ed25519-dalek = { version = "2", features = ["rand_core", "serde"] }
hex = "0.4"
http = "1.1"
prost = "0.13"
rand = "0.8"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
semver = { version = "1", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3"
thiserror = "1.0"
tonic = { version = "0.12", default-features = false, features = ["codegen", "transport"] }
url = { version = "2.5", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
