[package]
name = "auraone-platform-intake"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
chrono.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
uuid.workspace = true
zip.workspace = true

[dev-dependencies]
rand.workspace = true
tempfile.workspace = true
