[package]
name = "auraone-platform-otlp"
version = "0.3.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bytes.workspace = true
http.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tonic.workspace = true
