[package]
name = "auraone-platform-updater"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
base64.workspace = true
ed25519-dalek.workspace = true
serde.workspace = true
serde_json.workspace = true
semver.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
rand.workspace = true
