[package]
name = "auraone-platform-video"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
ffmpeg = ["dep:ffmpeg-next"]

[dependencies]
serde.workspace = true
thiserror.workspace = true
ffmpeg-next = { version = "7.1", optional = true }
