[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "agentstudio"
version = "0.1.0"
description = "Agent Studio Open CLI for MCP and A2A agent debugging workflows"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "AuraOne", email = "opensource@auraone.ai" }
]
keywords = ["agent", "mcp", "a2a", "debugging", "replay", "opentelemetry"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Testing",
  "Topic :: System :: Monitoring"
]
dependencies = [
  "click>=8.1,<9",
  "pydantic>=2.7,<3",
  "rich>=13.7,<14"
]

[project.urls]
Homepage = "https://agentstudio.auraone.ai/"
Documentation = "https://agentstudio.auraone.ai/docs"
Repository = "https://github.com/auraoneai/agent-studio-open"
Issues = "https://github.com/auraoneai/agent-studio-open/issues"
Security = "https://github.com/auraoneai/agent-studio-open/security/policy"

[project.scripts]
agentstudio = "agentstudio.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agentstudio"]

[tool.hatch.build.targets.sdist]
include = [
  "src/agentstudio",
  "README.md",
  "LICENSE"
]
