[package]
name = "auraone-open-studio-template"
version = "0.1.0"
description = "AuraOne Open Studio Tauri 2 shell template"
authors = ["AuraOne Platform Team"]
license = "MIT"
edition = "2021"
rust-version = "1.94"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tauri = { version = "2.11.1", features = [] }
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-deep-link = "2.4.9"
tauri-plugin-dialog = "2.4.0"
tauri-plugin-fs = "2.5.1"
tauri-plugin-notification = "2.3.3"
tauri-plugin-os = "2.3.1"
tauri-plugin-process = "2.3.0"
tauri-plugin-updater = "2.10.1"
thiserror = "2.0.17"
time = { version = "0.3.44", features = ["formatting"] }
url = "2.5.7"
uuid = { version = "1.19.0", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.26.0"
